test/fail/listadd.app
//No function

application test

  entity Entity{}

  function do() {
    var list : List<String> := List<String>();
    list.add(Entity{});
  }
